--- a/local-antora-playbook-en.yml
+++ b/local-antora-playbook-en.yml
@@ -8,6 +8,18 @@ content:
       start_path: adocOutput/en
 asciidoc:
   attributes:
+    # General
+    icons: font
+    linkattrs:
+    sectnums:
+    numbered:
+    toc: right
+    toclevels: 5
+    xrefstyle: short
+    source-highlighter: highlightjs
+    example-caption!:
+    stem: latexmath
+    # Extensions
     tabs: tabs
 output:
   dir: ./build/en
