fix: add organisation information

--- a/local-antora-playbook-en.yml
+++ b/local-antora-playbook-en.yml
@@ -8,6 +8,9 @@ content:
       start_path: adocOutput/en
 asciidoc:
   attributes:
+    # Organisation
+    copyright: © 2021 plentysystems AG
+    orgname: plentysystems AG
     # General
     icons: font
     linkattrs:
