--- a/antora-playbook-en.yml
+++ b/antora-playbook-en.yml
@@ -8,6 +8,9 @@ content:
     start_path: docs/en-gb
 asciidoc:
   attributes:
+    # Organisation
+    copyright: © 2021 plentysystems AG
+    orgname: plentysystems AG
     # General
     icons: font
     linkattrs:
