feat: disallow robots

--- a/antora-playbook-en.yml
+++ b/antora-playbook-en.yml
@@ -1,6 +1,7 @@
 site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/en-gb
+  robots: disallow
 content:
   sources:
   - url: https://github.com/plentymarkets/plenty-manual-docs
