--- a/antora-playbook-de.yml
+++ b/antora-playbook-de.yml
@@ -1,6 +1,7 @@
 site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/de-de
+  robots: disallow
 content:
   sources:
   - url: https://github.com/plentymarkets/plenty-manual-docs
