fix: update local playbooks with updated paths

--- a/local-antora-playbook-de.yml
+++ b/local-antora-playbook-de.yml
@@ -1,11 +1,14 @@
+# Either clone the content repositories listed under sources or delete the respective blocks.
+# Clone the UI repository from plenty-docs-ui.
+# Change USER in the url paths to your user name.
 site:
   title: plentymarkets manual
-  url: https://knowledge.plentymarkets.com/en-gb
+  url: https://knowledge.plentymarkets.com/de-de
 content:
   sources:
     - url: ./
       branches: HEAD
-      start_path: adocOutput/de
+      start_path: docs/de-de
 asciidoc:
   attributes:
     # Organisation
@@ -16,8 +19,6 @@ asciidoc:
     linkattrs:
     sectnums:
     numbered:
-    toc: right
-    toclevels: 5
     xrefstyle: short
     source-highlighter: highlightjs
     example-caption!:
@@ -43,8 +44,8 @@ asciidoc:
     version-label: Version
     warning-caption: Warnung
 output:
-  dir: ./build/de
+  dir: ./build/de-de
 ui:
   bundle:
-    url: https://github.com/plentymarkets/plenty-docs-ui/raw/main/build/ui-bundle.zip
+    url: /Users/USER/workspace/plenty-docs-ui/build/ui-bundle.zip
     snapshot: true
