--- a/local-antora-playbook-en.yml
+++ b/local-antora-playbook-en.yml
@@ -1,3 +1,6 @@
+# Either clone the content repositories listed under sources or delete the respective blocks.
+# Clone the UI repository from plenty-docs-ui.
+# Change USER in the url paths to your user name.
 site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/en-gb
@@ -5,7 +8,7 @@ content:
   sources:
     - url: ./
       branches: HEAD
-      start_path: adocOutput/en
+      start_path: docs/en-gb
 asciidoc:
   attributes:
     # Organisation
@@ -16,8 +19,6 @@ asciidoc:
     linkattrs:
     sectnums:
     numbered:
-    toc: right
-    toclevels: 5
     xrefstyle: short
     source-highlighter: highlightjs
     example-caption!:
@@ -25,8 +26,8 @@ asciidoc:
     # Extensions
     tabs: tabs
 output:
-  dir: ./build/en
+  dir: ./build/en-gb
 ui:
   bundle:
-    url: https://github.com/plentymarkets/plenty-docs-ui/raw/main/build/ui-bundle.zip
+    url: /Users/USER/workspace/plenty-docs-ui/build/ui-bundle.zip
     snapshot: true
