--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build site
         run: |
-          npm i -g @antora/cli @antora/site-generator-default
+          npm i -g @antora/cli@2.3 @antora/site-generator-default@2.3
           antora antora-playbook-de.yml --fetch --stacktrace
           antora antora-playbook-en.yml --fetch --stacktrace
           
