dcj/218990 - added js lib for icons

--- a/antora-playbook-de.yml
+++ b/antora-playbook-de.yml
@@ -45,6 +45,7 @@ asciidoc:
     warning-caption: Warnung
   extensions:
   - ./lib/tabs-block.js
+  - ./lib/inline-icon.js
 output:
     dir: ./build/de-de
 ui:
