--- a/local-antora-playbook-de.yml
+++ b/local-antora-playbook-de.yml
@@ -5,7 +5,7 @@ content:
   sources:
     - url: ./
       branches: HEAD
-      start_path: adocOutput/de
+      start_path: docs/de-de
 asciidoc:
   attributes:
     # Organisation
@@ -42,9 +42,12 @@ asciidoc:
     untitled-label: Ohne Titel
     version-label: Version
     warning-caption: Warnung
+  extensions:
+  - ./lib/tabs-block.js
+  - ./lib/inline-icon.js
 output:
   dir: ./build/de
 ui:
   bundle:
-    url: https://github.com/plentymarkets/plenty-docs-ui/raw/main/build/ui-bundle.zip
+    url: /Users/dpanta/workspace/docs/plenty-docs-ui/build/ui-bundle.zip
     snapshot: true
