DCJ/218990 - Add extensions to the rest of the playbooks

--- a/local-antora-playbook-en.yml
+++ b/local-antora-playbook-en.yml
@@ -25,6 +25,9 @@ asciidoc:
     stem: latexmath
     # Extensions
     tabs: tabs
+  extensions:
+    - ./lib/tabs-block.js
+    - ./lib/inline-icon.js
 output:
   dir: ./build/en-gb
 ui:
