DCJ/218990 - Add extensions to the rest of the playbooks

--- a/local-antora-playbook-de.yml
+++ b/local-antora-playbook-de.yml
@@ -49,7 +49,7 @@ asciidoc:
   - ./lib/tabs-block.js
   - ./lib/inline-icon.js
 output:
-  dir: ./build/de
+  dir: ./build/de-de
 ui:
   bundle:
     url: /Users/USER/workspace/plenty-docs-ui/build/ui-bundle.zip
