Dcj/218990 - implement icon generator as an extension (#14)
* Implement Script for extracting the files

* Implement Script for extracting the files

* Implement Script for extracting the files

* feat: add global attributes to playbooks

* fix: add organisation information

* Implement Script for generating Antora

* Implement json for mapping the language pages

* feat: update migration script
add migration for partials
add image paths
fix sed options order
fix copy operation for _includes folder

* fix: directory paths for EN migration

* fix: file name pattern
fix: EN glossary path
prevents search pattern from finding strings it shouldn't

* fix: cp pages path
exclude textblocks

* fix: header include

* feat: add global 404 page

* feat: disallow robots

* feat: add generated docs

* dcj/218990 - added js lib for icons

* DCJ/218990 - Icon generator as an extension

* DCJ/218990 - Icon generator as an extension

* DCJ/218990 - Add extensions to the rest of the playbooks

* DCJ/218990 - Add extensions to the rest of the playbooks

Co-authored-by: ksted <kevin.stederoth@plentymarkets.com>
Co-authored-by: Kevin Stederoth <43753494+ksted@users.noreply.github.com>
Co-authored-by: dpanta <diana.panta@plentymarkets.com>

--- a/local-antora-playbook-de.yml
+++ b/local-antora-playbook-de.yml
@@ -19,6 +19,8 @@ asciidoc:
     linkattrs:
     sectnums:
     numbered:
+    toc: right
+    toclevels: 5
     xrefstyle: short
     source-highlighter: highlightjs
     example-caption!:
@@ -43,6 +45,9 @@ asciidoc:
     untitled-label: Ohne Titel
     version-label: Version
     warning-caption: Warnung
+  extensions:
+  - ./lib/tabs-block.js
+  - ./lib/inline-icon.js
 output:
   dir: ./build/de-de
 ui:
