fix: release config

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -34,6 +34,7 @@ jobs:
           # Move index to build directory
           mv index.html ./build/index.html
           mv 404.html ./build/404.html
+          mv mappter.json ./build/mapper.json
           
       - name: Upload site to S3
         uses: jakejarvis/s3-sync-action@master
