--- a/antora-playbook-en.yml
+++ b/antora-playbook-en.yml
@@ -1,6 +1,7 @@
 site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/en-gb
+  lang: en-gb
   robots: disallow
 content:
   sources:
@@ -17,8 +18,6 @@ asciidoc:
     linkattrs:
     sectnums:
     numbered:
-    toc: right
-    toclevels: 5
     xrefstyle: short
     source-highlighter: highlightjs
     example-caption!:
