--- a/local-antora-playbook-de.yml
+++ b/local-antora-playbook-de.yml
@@ -4,6 +4,7 @@
 site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/de-de
+  lang: de-de
 content:
   sources:
     - url: ./
@@ -19,8 +20,6 @@ asciidoc:
     linkattrs:
     sectnums:
     numbered:
-    toc: right
-    toclevels: 5
     xrefstyle: short
     source-highlighter: highlightjs
     example-caption!:
