--- a/local-antora-playbook-en.yml
+++ b/local-antora-playbook-en.yml
@@ -4,6 +4,7 @@
 site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/en-gb
+  lang: en-gb
 content:
   sources:
     - url: ./
