--- a/.github/templates/local-antora-playbook-en.yml
+++ b/.github/templates/local-antora-playbook-en.yml
@@ -1,5 +1,5 @@
-# Either clone the content repositories listed under sources or delete the respective blocks.
 # Clone the UI repository from plenty-docs-ui.
+# Make a copy of this file and place it in the root directory, plenty-manual-docs/
 # Change USER in the url paths to your user name.
 site:
   title: plentymarkets manual
