--- a/.github/templates/local-antora-playbook-de.yml
+++ b/.github/templates/local-antora-playbook-de.yml
@@ -1,9 +1,10 @@
-# Either clone the content repositories listed under sources or delete the respective blocks.
 # Clone the UI repository from plenty-docs-ui.
+# Make a copy of this file and place it in the root directory, plenty-manual-docs/
 # Change USER in the url paths to your user name.
 site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/de-de
+  lang: de-de
 content:
   sources:
     - url: ./
@@ -12,15 +13,13 @@ content:
 asciidoc:
   attributes:
     # Organisation
-    copyright: © 2021 plentysystems AG
+    copyright: © 2022 plentysystems AG
     orgname: plentysystems AG
     # General
     icons: font
     linkattrs:
     sectnums:
     numbered:
-    toc: right
-    toclevels: 5
     xrefstyle: short
     source-highlighter: highlightjs
     example-caption!:
