--- a/antora-playbook-en.yml
+++ b/antora-playbook-en.yml
@@ -1,6 +1,7 @@
 site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/en-gb
+  lang: en-gb
   robots: disallow
 content:
   sources:
@@ -10,15 +11,13 @@ content:
 asciidoc:
   attributes:
     # Organisation
-    copyright: © 2021 plentysystems AG
+    copyright: © 2022 plentysystems AG
     orgname: plentysystems AG
     # General
     icons: font
     linkattrs:
     sectnums:
     numbered:
-    toc: right
-    toclevels: 5
     xrefstyle: short
     source-highlighter: highlightjs
     example-caption!:
