fix: move lang to page attribute

--- a/.github/templates/local-antora-playbook-de.yml
+++ b/.github/templates/local-antora-playbook-de.yml
@@ -4,7 +4,6 @@
 site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/de-de
-  lang: de-de
 content:
   sources:
     - url: ./
@@ -27,6 +26,7 @@ asciidoc:
     # Extensions
     tabs: tabs
     # L10N
+    page-lang: de-de
     appendix-caption: Anhang
     caution-caption: Achtung
     chapter-label: Kapitel
