--- a/.github/templates/local-antora-playbook-en.yml
+++ b/.github/templates/local-antora-playbook-en.yml
@@ -4,7 +4,6 @@
 site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/en-gb
-  lang: en-gb
 content:
   sources:
     - url: ./
@@ -26,6 +25,8 @@ asciidoc:
     stem: latexmath
     # Extensions
     tabs: tabs
+    # L10N
+    page-lang: en-gb
   extensions:
     - ./lib/tabs-block.js
     - ./lib/inline-icon.js
