--- a/antora-playbook-de.yml
+++ b/antora-playbook-de.yml
@@ -1,7 +1,6 @@
 site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/de-de
-  lang: de-de
   robots: disallow
 content:
   sources:
@@ -25,6 +24,7 @@ asciidoc:
     # Extensions
     tabs: tabs
     # L10N
+    page-lang: de-de
     appendix-caption: Anhang
     caution-caption: Achtung
     chapter-label: Kapitel
