--- a/antora-playbook-en.yml
+++ b/antora-playbook-en.yml
@@ -1,7 +1,6 @@
 site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/en-gb
-  lang: en-gb
   robots: disallow
 content:
   sources:
@@ -24,6 +23,8 @@ asciidoc:
     stem: latexmath
     # Extensions
     tabs: tabs
+    # L10N
+    page-lang: en-gb
   extensions:
   - ./lib/tabs-block.js
   - ./lib/inline-icon.js
