dcj/223212 - sitemap in root with reference to language sitemaps

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -35,6 +35,7 @@ jobs:
           mv index.html ./build/index.html
           mv 404.html ./build/404.html
           mv mapper.json ./build/mapper.json
+          mv sitemap.xml ./build/sitemap.xml
           
       - name: Upload site to S3
         uses: jakejarvis/s3-sync-action@master
