dcj/223455 - added robot.txt

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -36,6 +36,7 @@ jobs:
           mv 404.html ./build/404.html
           mv mapper.json ./build/mapper.json
           mv sitemap.xml ./build/sitemap.xml
+          mv robots.txt ./build/robots.txt
           
       - name: Upload site to S3
         uses: jakejarvis/s3-sync-action@master
