--- a/antora-playbook-en.yml
+++ b/antora-playbook-en.yml
@@ -1,7 +1,12 @@
 site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/en-gb
-  robots: disallow
+  robots: |
+    User-agent: Swiftbot
+    Disallow:
+
+    User-agent: *
+    Disallow: /
 content:
   sources:
   - url: https://github.com/plentymarkets/plenty-manual-docs
