dcj/224999 - fix lang paths

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/checkout@v2
         with:
-          - repository: plentymarkets/plenty-docs-ui
-          - path: plenty-docs-ui-repo
+          repository: plentymarkets/plenty-docs-ui
+          path: plenty-docs-ui-repo
       
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.2
