feat: add sitemap locations to robots

--- a/antora-playbook-de.yml
+++ b/antora-playbook-de.yml
@@ -4,6 +4,8 @@ site:
   robots: |
     User-agent: Swiftbot
     Disallow:
+    Sitemap: https://beta-knowledge.plentymarkets.com/de-de/sitemap.xml
+    Sitemap: https://beta-knowledge.plentymarkets.com/en-gb/sitemap.xml
 
     User-agent: *
     Disallow: /
