--- a/antora-playbook-en.yml
+++ b/antora-playbook-en.yml
@@ -2,7 +2,7 @@ site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/en-gb
   robots: |
-    User-agent: Swiftbot
+    User-agent: Elastic-Crawler
     Disallow:
     Sitemap: https://beta-knowledge.plentymarkets.com/de-de/sitemap.xml
     Sitemap: https://beta-knowledge.plentymarkets.com/en-gb/sitemap.xml
