--- a/.github/templates/local-antora-playbook-en.yml
+++ b/.github/templates/local-antora-playbook-en.yml
@@ -17,7 +17,7 @@ asciidoc:
     # General
     icons: font
     linkattrs:
-    toclevels: 5
+    page-toclevels: 5
     sectnums:
     numbered:
     xrefstyle: short
