--- a/antora-playbook-en.yml
+++ b/antora-playbook-en.yml
@@ -22,7 +22,7 @@ asciidoc:
     # General
     icons: font
     linkattrs:
-    toclevels: 5
+    page-toclevels: 5
     sectnums:
     numbered:
     xrefstyle: short
