fix: site url for beta

--- a/antora-playbook-en.yml
+++ b/antora-playbook-en.yml
@@ -1,6 +1,6 @@
 site:
   title: plentymarkets manual
-  url: https://knowledge.plentymarkets.com/en-gb
+  url: https://beta-knowledge.plentymarkets.com/en-gb
   robots: |
     User-agent: Elastic-Crawler
     Disallow:
