--- a/antora-playbook-de.yml
+++ b/antora-playbook-de.yml
@@ -1,6 +1,6 @@
 site:
   title: plentymarkets manual
-  url: https://knowledge.plentymarkets.com/de-de
+  url: https://beta-knowledge.plentymarkets.com/de-de
   robots: |
     User-agent: Elastic-Crawler
     Disallow:
