fix: start page

--- a/antora-playbook-de.yml
+++ b/antora-playbook-de.yml
@@ -1,5 +1,6 @@
 site:
   title: plentymarkets manual
+  start_page: manual::index.adoc
   url: https://beta-knowledge.plentymarkets.com/de-de
   robots: |
     User-agent: Elastic-Crawler
