--- a/antora-playbook-en.yml
+++ b/antora-playbook-en.yml
@@ -1,5 +1,6 @@
 site:
   title: plentymarkets manual
+  start_page: manual::index.adoc
   url: https://beta-knowledge.plentymarkets.com/en-gb
   robots: |
     User-agent: Elastic-Crawler
