feat: add section numbers

--- a/antora-playbook-de.yml
+++ b/antora-playbook-de.yml
@@ -24,7 +24,8 @@ asciidoc:
     icons: font
     linkattrs:
     page-toclevels: 5
-    sectnums:
+    sectnums: '|,all|'
+    sectnumlevels: 5
     numbered:
     xrefstyle: short
     source-highlighter: highlightjs
