--- a/templates/local-antora-playbook-de.yml
+++ b/templates/local-antora-playbook-de.yml
@@ -1,9 +1,10 @@
 # Clone the UI repository from plenty-docs-ui.
 # Make a copy of this file and place it in the root directory, plenty-manual-docs/
-# Change USER in the url paths to your user name.
 site:
   title: plentymarkets manual
   url: https://knowledge.plentymarkets.com/de-de
+runtime:
+  fetch: true
 content:
   sources:
     - url: ./
@@ -49,8 +50,8 @@ asciidoc:
   - ./lib/tabs-block.js
   - ./lib/inline-icon.js
 output:
-  dir: ./build/de-de
+    dir: ./build/de-de
 ui:
   bundle:
-    url: /Users/USER/workspace/plenty-docs-ui/build/ui-bundle.zip
+    url: https://github.com/plentymarkets/plenty-docs-ui/raw/main/build/ui-bundle.zip
     snapshot: true
