--- a/antora-playbook-en.yml
+++ b/antora-playbook-en.yml
@@ -9,6 +9,8 @@ site:
 
     User-agent: *
     Disallow: /
+runtime:
+  fetch: true
 content:
   sources:
   - url: https://github.com/plentymarkets/plenty-manual-docs
