--- a/antora-playbook-de.yml
+++ b/antora-playbook-de.yml
@@ -1,12 +1,12 @@
 site:
   title: plentymarkets manual
   start_page: manual::index.adoc
-  url: https://beta-knowledge.plentymarkets.com/de-de
+  url: https://knowledge.plentymarkets.com/de-de
   robots: |
     User-agent: Elastic-Crawler
     Disallow:
-    Sitemap: https://beta-knowledge.plentymarkets.com/de-de/sitemap.xml
-    Sitemap: https://beta-knowledge.plentymarkets.com/en-gb/sitemap.xml
+    Sitemap: https://knowledge.plentymarkets.com/de-de/sitemap.xml
+    Sitemap: https://knowledge.plentymarkets.com/en-gb/sitemap.xml
 
     User-agent: *
     Disallow: /
