feat: add concurrency group

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -6,6 +6,9 @@ on:
   repository_dispatch:
     types: [ ContentSourceUpdate, UIBundleUpdate ]
   workflow_dispatch:
+  
+concurrency:
+  group: publish
 
 jobs:
   build:
