fix: section numbering

--- a/templates/local-antora-playbook-de.yml
+++ b/templates/local-antora-playbook-de.yml
@@ -19,8 +19,8 @@ asciidoc:
     icons: font
     linkattrs:
     page-toclevels: 5
-    sectnums:
-    numbered:
+    sectnums: '|,all|'
+    sectnumlevels: 5
     xrefstyle: short
     source-highlighter: highlightjs
     example-caption!:
