--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,6 +6,9 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Checkout github-actions repo
         uses: actions/checkout@v3
         with:
@@ -15,3 +18,5 @@ jobs:
           path: .tmp/github-actions
       - name: Lint text w/ Vale
         uses: ./.tmp/github-actions/vale_text_lint/
+        with:
+          token: ${{ secrets.ORGA_PAT_CICD3_FULL_REPO_AND_PACKAGES }}
