feat: add material icon macro

--- a/antora-playbook-en.yml
+++ b/antora-playbook-en.yml
@@ -39,6 +39,7 @@ asciidoc:
   extensions:
   - ./lib/tabs-block.js
   - ./lib/inline-icon.js
+  - ./lib/material-icon.js
 output:
     dir: ./build/en-gb
 ui:
