--- a/antora-playbook-de.yml
+++ b/antora-playbook-de.yml
@@ -55,6 +55,7 @@ asciidoc:
   extensions:
   - ./lib/tabs-block.js
   - ./lib/inline-icon.js
+  - ./lib/material-icon.js
 output:
     dir: ./build/de-de
 ui:
