feat: add terra icon macro

--- a/antora-playbook-en.yml
+++ b/antora-playbook-en.yml
@@ -40,6 +40,7 @@ asciidoc:
   - ./lib/tabs-block.js
   - ./lib/inline-icon.js
   - ./lib/material-icon.js
+  - ./lib/terra-icon.js
 output:
     dir: ./build/en-gb
 ui:
