--- a/antora-playbook-de.yml
+++ b/antora-playbook-de.yml
@@ -56,6 +56,7 @@ asciidoc:
   - ./lib/tabs-block.js
   - ./lib/inline-icon.js
   - ./lib/material-icon.js
+  - ./lib/terra-icon.js
 output:
     dir: ./build/de-de
 ui:
