feat: add new icon macro (#658)
* feat: add material icon macro

* feat: add terra icon macro

* fix: formatting

--- a/antora-playbook-de.yml
+++ b/antora-playbook-de.yml
@@ -55,6 +55,8 @@ asciidoc:
   extensions:
   - ./lib/tabs-block.js
   - ./lib/inline-icon.js
+  - ./lib/material-icon.js
+  - ./lib/terra-icon.js
 output:
     dir: ./build/de-de
 ui:
