--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -1,4 +1,5 @@
-DirectoryPath: "build/de-de"
+CheckExternal: false
+DirectoryPath: "build/"
 IgnoreDirs:
 - "changelog"
 IgnoreDirectoryMissingTrailingSlash: true
