--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -9,3 +9,4 @@ IgnoreURLs:
 - "https://twitter.com/plentymarkets"
 - "https://marketplace.plentymarkets.com/"
 - "www.example.com"
+LogSort: document
