--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   html-test:
-    runs-on: ["self-hosted", "stable", "2xlarge"]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
