fix: limit scope to de-de

--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -1,5 +1,5 @@
 CheckExternal: false
-DirectoryPath: "build/"
+DirectoryPath: "build/de-de/"
 IgnoreDirs:
 - "changelog"
 IgnoreDirectoryMissingTrailingSlash: true
