--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Move I18N files
         run: |
           mkdir ./lang/
+          mv ${GITHUB_WORKSPACE}/plenty-docs-ui-repo/src/lang/en-gb.json ./lang/en-gb.json
           mv ${GITHUB_WORKSPACE}/plenty-docs-ui-repo/src/lang/de-de.json ./lang/de-de.json
 
       - name: Use htmltest
