--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -1,5 +1,5 @@
 CheckExternal: false
-DirectoryPath: "build/de-de/"
+DirectoryPath: "build/"
 IgnoreDirs:
 - "changelog"
 IgnoreDirectoryMissingTrailingSlash: true
@@ -9,4 +9,12 @@ IgnoreURLs:
 - "https://twitter.com/plentymarkets"
 - "https://marketplace.plentymarkets.com/"
 - "www.example.com"
+- "/de-de/manual/main/willkommen/systemvoraussetzungen.html"
+- "/de-de/manual/main/business-entscheidungen/systemadministration.html"
+- "/de-de/manual/main/willkommen/assistenten.html"
+- "/de-de/manual/main/business-entscheidungen/eol.html"
+- "/en-gb/manual/main/welcome/quick-start-system-requirements.html"
+- "/en-gb/manual/main/business-decisions/system-administration.html"
+- "/en-gb/manual/main/welcome/assistants.html"
+- "/en-gb/manual/main/business-decisions/eol.html"
 LogSort: document
