fix: exclude videos from htmltest

--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -2,6 +2,7 @@ CheckExternal: false
 DirectoryPath: "build/"
 IgnoreDirs:
 - "changelog"
+- "videos"
 IgnoreDirectoryMissingTrailingSlash: true
 IgnoreInternalEmptyHash: true
 IgnoreURLs:
